# auth-server-fastapi-i01-auth-server-fastapi-38302-38407-pre_prod

./: .env.example  .function_call_history  .gitignore  .task_tracker.json  Dockerfile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
.github/workflowss/: cd.ymls
app/: __init__.py  main.py
app/api/: __init__.py  deps.py
app/api/v1/: __init__.py  api.py
app/api/v1/endpoints/: __init__.py  auth.py  users.py
app/core/: __init__.py  config.py  security.py
app/crud/: __init__.py  base.py  crud_user.py
app/db/: __init__.py  base.py  session.py
app/models/: __init__.py  user.py
app/schemas/: __init__.py  token.py  user.py
app/services/: __init__.py  email.py
helm/auth-service/: Chart.yaml  README.md  values.yaml
helm/auth-service/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  networkpolicy.yaml  postgresql.yaml  pvc.yaml  secret.yaml  service.yaml  serviceaccount.yaml
kubernetes/: configmap.yaml  deployment.yaml  secret.yaml  service.yaml
migrations/: README  env.py  script.py.mako
migrations/versions/: 20230801_120000_initial_user_table.py
tests/: __init__.py  conftest.py
tests/test_api/: __init__.py  test_auth.py  test_users.py
